SUBDIRS= @moduledirs@

DIST_SUBDIRS = \
	bindbackend \
	ensbackend \
	geoipbackend \
	gmysqlbackend \
	godbcbackend \
	goraclebackend \
	gpgsqlbackend \
	gsqlite3backend \
	ldapbackend \
	luabackend \
	mydnsbackend \
	opendbxbackend \
	oraclebackend \
	pipebackend \
	randombackend \
	remotebackend \
	tinydnsbackend
